--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.1.3",
     "react": "^18.0.0",
     "react-bootstrap": "^2.2.3",
+    "react-bootstrap-range-slider": "^3.0.4",
     "react-dom": "^18.0.0",
     "react-gauge-chart": "^0.4.0",
     "react-player": "^2.10.0",
