--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-gauge-chart": "^0.4.0",
     "react-player": "^2.10.0",
     "react-scripts": "5.0.0",
+    "react-slider": "^2.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
