--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "node": "14.3.0"
   },
   "dependencies": {
+    "@react-pdf/renderer": "^2.1.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
@@ -17,6 +18,7 @@
     "react-bootstrap-range-slider": "^3.0.4",
     "react-dom": "^18.0.0",
     "react-gauge-chart": "^0.4.0",
+    "react-pdf": "^5.7.2",
     "react-player": "^2.10.0",
     "react-scripts": "5.0.0",
     "react-slider": "^2.0.0",
