--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
+    "i18next": "^21.8.5",
     "i18next-browser-languagedetector": "^6.1.4",
+    "i18next-http-backend": "^1.4.1",
     "react": "^16.14.0",
     "react-bootstrap": "^2.2.3",
     "react-bootstrap-range-slider": "^3.0.4",
